syntax = "proto3";
package ununifi.derivatives;

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/UnUniFi/chain/x/derivatives/types";

enum AssetType {
  Real = 0;
  Imaginary = 1;
}

enum PositionType {
  POSITION_UNKNOWN = 0;
  LONG = 1;
  SHORT = 2;
}

message WrappedPosition {
  string id = 1 [
    (gogoproto.moretags) = "yaml:\"id\""
  ];
  string address = 2 [
    (gogoproto.moretags) = "yaml:\"address\"",
    (gogoproto.customtype) = "github.com/UnUniFi/chain/types.StringAccAddress",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Timestamp start_at = 3 [
    (gogoproto.moretags) = "yaml:\"start_at\"",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Any position = 5 [
    (gogoproto.moretags) = "yaml:\"position\"",
    (gogoproto.nullable) = false
  ];
}

message Pool {
  message Asset {
    string denom = 1 [
      (gogoproto.moretags) = "yaml:\"denom\""
    ];
    string target_weight = 2 [
      (gogoproto.moretags) = "yaml:\"target_weight\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable) = false
    ];
  }

  string quote_ticker = 1 [
    (gogoproto.moretags) = "yaml:\"quote_ticker\""
  ];
  string base_lpt_mint_fee = 2 [
    (gogoproto.moretags) = "yaml:\"base_lpt_mint_fee\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string base_lpt_redeem_fee = 3 [
    (gogoproto.moretags) = "yaml:\"base_lpt_redeem_fee\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string borrowing_fee_rate_per_hour = 4 [
    (gogoproto.moretags) = "yaml:\"borrowing_fee_rate_per_hour\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  repeated Asset accepted_assets = 5 [
    (gogoproto.moretags) = "yaml:\"accepted_assets\"",
    (gogoproto.nullable) = false
  ];
}

message PoolMarketCap {
  message Breakdown {
    string denom = 1 [
      (gogoproto.moretags) = "yaml:\"denom\""
    ];
    string amount = 2 [
      (gogoproto.moretags) = "yaml:\"amount\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
      (gogoproto.nullable) = false
    ];
    string price = 3 [
      (gogoproto.moretags) = "yaml:\"price\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable) = false
    ];
  }

  string quote_ticker = 1 [
    (gogoproto.moretags) = "yaml:\"quote_ticker\""
  ];
  string total = 2 [
    (gogoproto.moretags) = "yaml:\"total\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  repeated Breakdown breakdown = 3 [
    (gogoproto.moretags) = "yaml:\"breakdown\"",
    (gogoproto.nullable) = false
  ];
}

message Pair {
  string denom = 1 [
    (gogoproto.moretags)  = "yaml:\"denom\""
  ];
  string quote_denom = 2 [
    (gogoproto.moretags)  = "yaml:\"quote_denom\""
  ];
}

message PerpetualFuturesPairParams {
  Pair pair = 1 [
    (gogoproto.moretags)  = "yaml:\"pair\"",
    (gogoproto.embed) = true
  ];
  
}

message PerpetualFuturesParams {
  string commission_rate = 1 [
    (gogoproto.moretags) = "yaml:\"commission_rate\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string margin_maintenance_rate = 2 [
    (gogoproto.moretags) = "yaml:\"margin_maintenance_rate\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string imaginary_funding_rate_proportional_coefficient = 3 [
    (gogoproto.moretags) = "yaml:\"imaginary_funding_rate_proportonal_coefficient\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  repeated Pair pairs = 4 [
    (gogoproto.moretags) = "yaml:\"pairs\"",
    (gogoproto.nullable) = false
  ];
}

message PerpetualOptionsParams {
  string premium_commission_rate = 1 [
    (gogoproto.moretags) = "yaml:\"premium_commission_rate\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string strike_commission_rate = 2 [
    (gogoproto.moretags) = "yaml:\"premium_commission_rate\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string margin_maintenance_rate = 3 [
    (gogoproto.moretags) = "yaml:\"margin_maintenance_rate\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string imaginary_funding_rate_proportional_coefficient = 4 [
    (gogoproto.moretags) = "yaml:\"imaginary_funding_rate_proportonal_coefficient\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  repeated Pair pairs = 5 [
    (gogoproto.moretags) = "yaml:\"pairs\"",
    (gogoproto.nullable) = false
  ];
}

message Params {
  Pool pool = 1 [
    (gogoproto.moretags) = "yaml:\"pool\"",
    (gogoproto.nullable) = false
  ];
  PerpetualFuturesParams perpetual_futures = 2 [
    (gogoproto.moretags) = "yaml:\"perpetual_futures\"",
    (gogoproto.nullable) = false
  ];
  PerpetualOptionsParams perpetual_options = 3 [
    (gogoproto.moretags) = "yaml:\"perpetual_options\"",
    (gogoproto.nullable) = false
  ];
}